--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,6 +153,21 @@ html {
   color:white; 
   }
 
+.buttonopeningtabs{
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:25px;
+}
+
+.buttonopeningtabs button {
+  padding: 10px 20px;
+  font-size: 18px;
+  cursor: pointer;
+
+}
+
+
 
 /* create page */
 
@@ -220,14 +235,108 @@ html {
     margin-left: 40px;
   }
 
-  
-
-.checkbox {
-  cursor: pointer;
-  user-select: none;
-  font-size: 20px;
-  margin-right: 20px;
-  display: inline-flex;
-  align-items: center;
+  .checkbox input[type="radio"] {
+  scale:0.7;
+   vertical-align: middle; 
+   margin: 0;
 }
 
+.radiobuttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  
+}
+
+.checkbox {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 22px;
+}
+
+label.checkbox{
+  font-size: 30px;
+    color:red;
+    text-align: center;
+   animation-delay: 5s;
+    animation-duration: 2s;
+    animation-name: fadeIn;
+    animation-timing-function: ease-out;
+    animation-fill-mode:both;
+}
+
+
+label.playername2{
+  font-size: 30px;
+    color:red;
+    display:block;
+    margin-left: 40px;
+    animation-delay: 3s;
+    animation-duration: 2s;
+    animation-name: fadeIn;
+    animation-timing-function: ease-out;
+    animation-fill-mode:both;
+    margin-top: 10px;
+}
+.playamount {
+  display: flex;
+  align-items: center;
+  gap: 15px; 
+  margin-left: 40px; 
+  animation-delay: 7s;
+  animation-duration: 2s;
+  animation-name: fadeIn;
+  animation-timing-function: ease-out;
+  animation-fill-mode: both;
+}
+
+label.playername2 {
+  font-size: 30px;
+  color: red;
+  animation-delay: 7s;
+  animation-duration: 2s;
+  animation-name: fadeIn;
+  animation-timing-function: ease-out;
+  animation-fill-mode: both;
+  margin: 0; 
+}
+
+.playamount input[type="text"] {
+  width: 50px;
+  height: 50px;
+  font-size: 35px;
+  animation-delay: 7s;
+  animation-duration: 2s;
+  animation-name: fadeIn;
+  animation-timing-function: ease-out;
+  animation-fill-mode: both;
+}
+
+#storyline h2{
+      font-size: 30px;
+    color:red;
+    display:block;
+    text-align: center;
+    animation-delay: 10s;
+    animation-duration: 2s;
+    animation-name: fadeIn;
+    animation-timing-function: ease-out;
+    animation-fill-mode:both;
+    margin-top: 10px;
+}
+#harrypottergame{
+     width:150px;
+    height:50px;
+    font-size: 25px;
+     animation-delay: 10s;
+    animation-duration: 2s;
+    animation-name: fadeIn;
+    animation-timing-function: ease-out;
+    animation-fill-mode:both;
+    margin-top:10px;
+     margin-left: 40px;
+
+}
