--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,250 +246,77 @@ html {
   font-size:15px;
 }
 
-/* create page */
-/*
+/* create page */ 
 
-#create {
-  overflow: hidden;
-  position: relative;
-}
-.slider-wrapper {
-    overflow: hidden;
-    width: 100%;
-    position: relative;
-  }
-
-  .slider-container {
-    display: flex;
-    width: 300%;
-    transition: transform 0.3s ease-in-out;
-  }
-
-  .slide {
-    width: 100%;
-    flex-shrink: 0;
-    padding: 2rem;
-    border: 1px dashed #ccc;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-
-*/
-  #create h2{
-    color:red;
-    font-size: 60px;
-   /* animation-duration: 3s;
-    animation-name: fadeIn;
-    animation-timing-function: ease-out; */
-    margin-top: 30px;
-    text-align: center;
-  }
-
-  label.playername1 {
-    font-size: 30px;
-    color:red;
-    display:block;
-    text-align: center;
-   /* animation-delay: 3s;
-    animation-duration: 2s;
-    animation-name: fadeIn;
-    animation-timing-function: ease-out;
-    animation-fill-mode:both;*/
-    margin-top: 10px;
-  }
-
-  .player input[type="text"]{
-    width:250px;
-    height:50px;
-    display: block;
-    margin: 0 auto;
-    margin-top: 10px;
-   /* animation-delay: 3s;
-    animation-duration: 2s;
-    animation-name: fadeIn;
-    animation-timing-function: ease-out;
-    animation-fill-mode:both;*/
-    font-size: 35px;
-   
-  }
-
-  
-  #create h3{
-    color:white;
-    text-align: center;
-   /* animation-duration: 5s;
-    animation-delay: 5s;
-    animation-name: fadeIn;
-    animation-timing-function: ease-out; 
-    animation-fill-mode: both; */
-    margin-top: 10px;
-    font-size: 30px;
-  }
-/*
-  #publicgame , #privategame {
-    width:150px;
-    height:50px;
-    font-size: 25px;
-    animation-delay: 5s;
-    animation-duration: 2s;
-    animation-name: fadeIn;
-    animation-timing-function: ease-out;
-    animation-fill-mode:both;
-    margin-top:40px;
-    margin-left: 40px;
-  }*/
-
-  .checkbox input[type="radio"] {
-  transform: scale(2.5);
-   vertical-align: middle; 
-   margin: 0;
-   
-}
-
-.radiobuttons {
-  display: flex;
-  justify-content: center;
-  gap: 50px;
+#create h2{
+  color:red;
+  font-size: 60px;
   margin-top: 30px;
-  margin-bottom:50px;
-  
-  
+  text-align: center;
+
+
 }
 
-.checkbox {
-  display: flex;
-  align-items:center; 
-  position: relative;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  gap: 20px;
+#slide1 h3, #slide3 h3{
+  color:black;
+  font-size:35px;
 }
 
-label.checkbox{
-  font-size: 30px;
-    color:red;
-    text-align: center;
- /*  animation-delay: 5s;
-    animation-duration: 2s;
-    animation-name: fadeIn;
-    animation-timing-function: ease-out;
-    animation-fill-mode:both;*/
-    
+.options{
+  display:flex;
+ justify-content: center;    
+ gap: 60px; 
+ font-size:25px;   
+ color:red;   
+
+
 }
 
 
-label.playername2{
-  font-size: 30px;
-    color:red;
-    display:block;
-    margin-left: 40px;
-  /*  animation-delay: 3s;
-    animation-duration: 2s;
-    animation-name: fadeIn;
-    animation-timing-function: ease-out;
-    animation-fill-mode:both;*/
-    margin-top: 10px;
-}
-.playamount {
-  display: flex;
-  align-items: center;
-  gap: 15px; 
-  margin-left: 40px; 
- /* animation-delay: 7s;
-  animation-duration: 2s;
-  animation-name: fadeIn;
-  animation-timing-function: ease-out;
-  animation-fill-mode: both;*/
+.slide {
+  background-color: white;
+  border-radius: 15px;
+  padding: 40px 30px;
+  box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+  margin: 40px auto;
+  max-width: 600px;
+  text-align: center;
+  transition: transform 0.3s ease, opacity 0.3s ease;
 }
 
-label.playername2 {
-  font-size: 30px;
+.slide h3 {
   color: red;
- /* animation-delay: 7s;
-  animation-duration: 2s;
-  animation-name: fadeIn;
-  animation-timing-function: ease-out;
-  animation-fill-mode: both;*/
-  margin: 0; 
+  font-size: 28px;
+  margin-bottom: 20px;
+  display: block;
 }
 
-.playamount input[type="text"] {
-  width: 70px;
-  height: 25px;
-  font-size: 17px;
-/*  animation-delay: 7s;
-  animation-duration: 2s;
-  animation-name: fadeIn;
-  animation-timing-function: ease-out;
-  animation-fill-mode: both;*/
+
+
+.slide input[type="number"]{
+  width:120px;
+  height:35px;
+  text-align: center;
+  margin-bottom: 10px;
+  font-size: 20px;
+  border-radius: 15px;
 }
 
-#storyline h2{
-    font-size: 50px;
-    color:red;
-    display:block;
-    text-align: center;
-   /* animation-delay: 10s;
-    animation-duration: 2s;
-    animation-name: fadeIn;
-    animation-timing-function: ease-out;
-    animation-fill-mode:both;*/
-    margin-top: 10px;
-}
-.storylinegame{
-  display: flex;
-  align-items:center; 
-  position: relative;
-  margin-bottom: 12px;
-  cursor: pointer;
-  font-size: 22px;
-  gap: 20px;
-  margin-left:30px;
-  
 
-}
-
-.storylinegame input[type="radio"]{
-   transform: scale(1.5);
-   vertical-align: middle; 
-   margin: 0;
-}
-
-.storygames{
-  display: flex;
-  gap: 50px;
-  margin-top: 30px;
-  margin-bottom:50px;
-}
-
-label.storylinegame{
-  font-size: 30px;
-    color:red;
-    text-align: center;
-   /* animation-delay: 10s;
-    animation-duration: 2s;
-    animation-name: fadeIn;
-    animation-timing-function: ease-out;
-    animation-fill-mode:both;*/
-    margin-top: 10px;
+#slide2{
+  font-size: 25px;
+  color: red;
 }
 
 #createButton{
-  width:100px;
-    height:25px;
-    font-size: 15px;
-  /*   animation-delay: 12s;
-    animation-duration: 2s;
-    animation-name: fadeIn;
-    animation-timing-function: ease-out;
-    animation-fill-mode:both;*/
-    margin-top: 10px;
-    margin-left: 40px;
-    margin-bottom: 20px;
-
+  width:200px;
+  height: 60px;
+  border-radius: 15px;
+  font-size: 20px;
+  display:block;
+   margin: 0 auto 50px auto;
 }
+
 
 /*lobby */ 
 
